# de_zoomcamp

./: .envrc.example  .gitignore  README.md
01-docker-terraform/common/: app-compose.yml  docker-compose.yml
01-docker-terraform/python/: .gitignore  Dockerfile  ingest_data.py  main.py
01-docker-terraform/rust/: .gitignore  Cargo.toml
01-docker-terraform/terraform/: main.tf  variables.tf
02-workflow-orchestration/: Dockerfile  Justfile  docker-compose.yml  pyproject.toml
common/: app-compose.yml
python/: .envrc.example  Dockerfile  Justfile  docker-compose.yml  ingest_data.py  main.py  pyproject.toml
rust/: Cargo.toml  Dockerfile  Justfile
rust/src/: main.rs
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf
