[project]
name = "de_zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "adbc-driver-postgresql>=1.9.0",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
